<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:background="#80cbc4"
    tools:context="fr.wildcodeschool.apprenti.javabien.ExoActivity3">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/consigne" />
    <TextView
        android:id="@+id/option_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_3"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/choix_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choix"
        android:gravity="center"
        android:text="@string/choix_1" />

    <TextView
        android:id="@+id/choix_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choix"
        android:gravity="center"
        android:text="@string/choix_2" />

    <TextView
        android:id="@+id/choix_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choix"
        android:gravity="center"
        android:text="@string/choix_3" />
</LinearLayout>